# AI-FAQs

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: __init__.py  agent.py  response_parser.py
tools/: __init__.py  executor.py  tools.json
ui/: __init__.py  styles.py
