[project]
name = "airoutes"
version = "0.1.0"
description = "Agentic AI tool that autonomously explores codebases to generate end-user FAQ documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.83.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
